force-app/main/default/objects/CaseFieldControllingValuesMap__c/CaseFieldControllingValuesMap__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>For each field  and value on a controller picklist entry, it will display the corresponding dependen values</description>
    <label>Case Field Controlling Values Map</label>
</CustomObject>