force-app/main/default/objects/CaseFieldControllingValuesMap__c/fields/ControllingFieldValue__c.field-meta.xml
<CustomField>
    <fullName>ControllingFieldValue__c</fullName>
    <description>Value for the current field, this will control the dependent values</description>
    <label>Controlling Field Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>