force-app/main/default/objects/CaseFieldControllingValuesMap__c/fields/DependentFields__c.field-meta.xml
<CustomField>
    <fullName>DependentFields__c</fullName>
    <description>Comma separated list of api names of fields that depend this field</description>
    <label>Dependent Fields</label>
    <type>TextArea</type>
</CustomField>