force-app/main/default/objects/CaseFieldControllingValuesMap__c/fields/FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>FieldAPIName__c</fullName>
    <description>Controlled field api name</description>
    <label>Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>